implemented spam report api, phone number addition
